[package]
name = "duty-free-bits"
version = "0.1.0"
edition = "2024"
authors = [
  "Nakul Khambhati <nakul@cs.ucla.edu>",
  "David Heath <daheath@illinois.edu>",
]
description = "Switch system construction from Duty-Free Bits"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alpenlabs/duty-free-bits"
categories = ["cryptography"]
keywords = ["garbled-circuits", "mpc", "switch-system", "bitvm"]

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[features]

[dev-dependencies]
rand = "0.10"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
